# smallengine

./: .gitignore  CMakeLists.txt  Makefile  README.md  doxyconf
inc/smallengine/: se_graphics.h  se_maths.h  se_sys.h
inc/smallengine/graphics/: canvas.h  color.h  palette.h  renderer.h  texture.h
inc/smallengine/maths/: maths.h  tuple.h
inc/smallengine/sys/: arg.h  log.h  mem.h  timer.h
src/graphics/: canvas.c  color.c  palette.c  sw_renderer.c  texture.c
src/maths/: maths.c  matrix.c  tuple.c
src/programs/: console.c
src/smallengine/graphics/: canvas.c  color.c  palette.c  sw_renderer.c  texture.c
src/smallengine/maths/: maths.c  tuple.c
src/smallengine/sys/: arg.c  mem.c  timer.c
src/sys/: arg.c  mem.c  timer.c
test/: ArgTest.cpp  CMakeLists.txt  CanvasTest.cpp.bkup  ColorTest.cpp  GraphicsTest.cpp  Maths-test.cpp  MathsTest.cpp  SysTest.cpp  TimerTest.cpp  main.cpp
test/smallengine/: argtest.c  canvastest.c  colortest.c  mathstest.c  memtest.c  palettetest.c  renderertest.c  texturetest.c  timertest.c  tupletest.c
